<resources>
    <string name="app_name">schedule</string>
    <string name="empty_schedule">Задачи отсутствуют</string>
    <string name="calendar">Календарь</string>
    <string name="add_schedule_description">Добавить</string>
    <string name="today">Сегодня</string>
    <string name="home">Главная</string>
    <string name="map">Карта</string>
    <string name="weather">Погода</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="add">Добавить</string>
    <string name="date">Дата</string>
    <string name="dot">.</string>
    <string name="delete">Удалить</string>
    <string name="accept">Принять</string>
    <string name="weather_now">Сейчас в городе: </string>
    <string name="city">Город: </string>
    <string name="key">AIzaSyBl2SZ01v9F2YBxi6iFQkDxcx8zKI4FXsA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="material_calendar_monday">Пн</string>
    <string name="material_calendar_tuesday">Вт</string>
    <string name="material_calendar_wednesday">Ср</string>
    <string name="material_calendar_thursday">Чт</string>
    <string name="material_calendar_friday">Пт</string>
    <string name="material_calendar_saturday">Сб</string>
    <string name="material_calendar_sunday">Вс</string>

    <array name="material_calendar_months_array">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </array>
</resources>