<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText

            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/dark"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@color/dark"
            android:textColorHint="@color/dark" />

        <EditText

            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/description"
            android:paddingLeft="2dp"
            android:inputType="textMultiLine"
            android:textColor="@color/dark"
            android:textColorHint="@color/dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            >

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark"
                android:ems="10"
                android:hint="@string/date"
                android:textColor="@color/dark"
                android:textColorHint="@color/dark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:divider="@drawable/spacer_medium"
            android:gravity="center"
            android:showDividers="middle"
            >
            <Button
                android:id="@+id/accept_button"
                android:layout_width="120dp"
                android:layout_height="31dp"
                android:text="@string/accept"
                android:textAllCaps="false"
                android:background="@drawable/today_button"
                />

            <Button
                android:id="@+id/del_button"
                android:layout_width="120dp"
                android:layout_height="31dp"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:background="@drawable/del_button"

                />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>